infrastructure/gateway/base/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: ai-gateway
  namespace: default
spec:
  gatewayClassName: inference-pool-with-aigwroute
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All
    # - name: https
    #   protocol: HTTPS
    #   port: 443
    #   tls:
    #     mode: Terminate
    #     certificateRefs:
    #       - kind: Secret
    #         name: my-secret
    #         namespace: default
    #   allowedRoutes:
    #     namespaces:
    #       from: All
  # infrastructure:
  #   labels:
  #     serving.kserve.io/gateway: kserve-ingress-gateway
